--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "js": "^0.1.0"
+  },
   "devDependencies": {
     "parcel-bundler": "^1.12.5",
     "sass": "^1.34.0"
